2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mblist: Stop using direct access to GdkEvent structs

	Use GdkEvent getters instead of directly accessing fields.

	* src/balsa-mblist.c (bmbl_select_mailbox), (bmbl_mru_selected_cb):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	compose window: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	* src/sendmsg-window.c (attachment_button_press_cb),
	(sw_attachment_list):

2020-06-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget-text: Use bmwt_html_ prefix

	for all HTML-related functions.

	* src/balsa-mime-widget-text.c (bmwt_html_zoom_in),
	(bmwt_html_zoom_out), (bmwt_html_zoom_reset),
	(bmwt_html_select_all_cb), (bmwt_html_populate_popup_menu),
	(bmwt_html_popup_context_menu), (bmwt_html_gesture_pressed_cb),
	(bmwt_html_populate_popup_cb), (bm_widget_new_html):

2020-06-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Connect to "notify::focus" signal instead of the
	"focus-in" and "focus-out" widget signals.

	And use the focus status to block the window's accelerator keys
	when the search entry has the keyboard focus.

	* src/main-window.c (bw_check_filter), (bw_create_index_widget),
	(bw_add_win_action_entries), (bw_set_menus), (balsa_window_new):

2020-06-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	application-helpers: Add the capability to block accels

	* libbalsa/application-helpers.c
	  (accel_activate): check whether they are blocked;
	  (libbalsa_window_block_accels): new function;
	* libbalsa/application-helpers.h: ditto.

2020-06-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget-text: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	The HTML part context menu was the last user of an event signal.

	* src/balsa-mime-widget-text.c (mwt_gesture_pressed_cb),
	(bm_widget_new_html):
